--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sohail - Job Links</title>
+  <title>ONE STOP TO LEVEL UP  YOUR CAREER</title>
   <style>
     body { font-family: Arial; text-align: center; padding: 40px; }
     .link-btn {
@@ -35,3 +35,4 @@
 
 </body>
 </html>
+
