--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
      IBM ASE
   </a>
 
-  <a class="link-btn" href="https://apply-job-link2.com" target="_blank">Job Link 2</a>
+  <a class="link-btn" href="https://app.joinsuperset.com/join/#/signup/student/jobprofiles/6fa74b2d-cea6-4fb5-9ca9-5c1537da23c5">Wipro</a>
   <a class="link-btn" href="https://apply-job-link3.com" target="_blank">Job Link 3</a>
 
 </body>
 </html>
+
 
