--- a/index.html
+++ b/index.html
@@ -1,41 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>ONE STOP TO LEVEL UP  YOUR CAREER</title>
-  <style>
-    body { font-family: Arial; text-align: center; padding: 40px; }
-    .link-btn {
-        display: block;
-        margin: 10px auto;
-        padding: 12px 20px;
-        width: 250px;
-        background: black;
-        color: white;
-        border-radius: 8px;
-        text-decoration: none;
-        font-size: 18px;
-    
-    .link-btn:hover {
-        background: #333;
-    }
-</style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JobsX - Daily Job Links</title>
 
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #111;
+            color: white;
+            text-align: center;
+            padding: 40px 20px;
+        }
+
+        h1 {
+            font-size: 28px;
+            margin-bottom: 20px;
+            letter-spacing: 1px;
+        }
+
+        .link-btn {
+            display: block;
+            margin: 12px auto;
+            padding: 14px 20px;
+            width: 90%;
+            max-width: 350px;
+            background: #222;
+            color: white;
+            border-radius: 10px;
+            text-decoration: none;
+            font-size: 18px;
+            border: 1px solid #444;
+            transition: 0.3s;
+        }
+
+        .link-btn:hover {
+            background: #333;
+            transform: scale(1.03);
+        }
+
+        .footer {
+            margin-top: 40px;
+            font-size: 14px;
+            opacity: 0.7;
+        }
+    </style>
 </head>
+
 <body>
-  <h2>Sohail - Job Links</h2>
+    <h1>📌 JobsX – Daily Job Updates</h1>
 
-  <!-- Direct real link here -->
-  <a class="link-btn" 
-     href="https://ibmglobal.avature.net/en_US/careers/JobDetail?jobId=66789&source=SN_LinkedIn" 
-     target="_blank">
-     IBM ASE
-  </a>
+    <!-- ⭐ Add your job links below -->
 
-  <a class="link-btn" href="https://app.joinsuperset.com/join/#/signup/student/jobprofiles/6fa74b2d-cea6-4fb5-9ca9-5c1537da23c5">Wipro</a>
-  <a class="link-btn" href="https://apply-job-link3.com" target="_blank">Job Link 3</a>
+    <a class="link-btn" href="https://www.naukri.com/" target="_blank">Naukri – Latest Jobs</a>
 
+    <a class="link-btn" href="https://www.linkedin.com/jobs/" target="_blank">LinkedIn – Job Search</a>
+
+    <a class="link-btn" href="https://tspsc.gov.in" target="_blank">TSPSC – Notifications</a>
+
+    <a class="link-btn" href="https://jobs.google.com" target="_blank">Google Careers</a>
+
+    <a class="link-btn" href="https://www.tcs.com/careers" target="_blank">TCS Careers</a>
+
+    <a class="link-btn" href="https://www.ibm.com/careers" target="_blank">IBM Careers</a>
+
+    <!-- ⭐ Add more links as needed -->
+
+    <div class="footer">
+        Made by Sohail • JobsX © 2025
+    </div>
 </body>
 </html>
-
-
 
