--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JobsX - Daily Job Links</title>
+    <title>JobsX By Sohail --Daily Job Links</title>
 
     <style>
         body {
@@ -72,4 +72,5 @@
     </div>
 </body>
 </html>
+
 
